--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-minimal
+theme: sky
 overlay: "<div class='myheader'><h2>my company</h2></div><div class='myfooter'><h2>the date</h2></div>"
